now when posting a comment, it returns the comment just saved
