# src/main/java/dev/pollito/springcityexplorer/controller/CommentController.java
@@ -1,7 +1,8 @@
 package dev.pollito.springcityexplorer.controller;
 
 import dev.pollito.springcityexplorer.api.CommentApi;
-import dev.pollito.springcityexplorer.models.CommentPostBody;
+import dev.pollito.springcityexplorer.models.CommentPostRequest;
+import dev.pollito.springcityexplorer.models.CommentPostResponse;
 import dev.pollito.springcityexplorer.models.Comments;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
@@ -14,7 +15,7 @@ public class CommentController implements CommentApi {
   }
 
   @Override
-  public ResponseEntity<Void> postComment(CommentPostBody body) {
+  public ResponseEntity<CommentPostResponse> postComment(CommentPostRequest body) {
     return null;
   }
 }
